alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -2575,13 +2575,11 @@ header.header-dark.header-prepare .side-menu-btn ul li a {
     .features-box-left {
         display: block;
         padding-left: 0px;
-        text-align: center;
     }
 
     .features-box-right {
         display: block;
         padding-right: 0px;
-        text-align: center;
     }
 
     .features-icon-left, .features-icon-right {
@@ -2597,7 +2595,15 @@ header.header-dark.header-prepare .side-menu-btn ul li a {
         padding-left: 0px;
         right: auto;
     }
-    
+
+@media (max-width:767px){
+    .features-box-left {
+        text-align: center;
+    }
+
+    .features-box-right {
+        text-align: center;
+    }
 }
 /*-------------------------------------------------------------------------------------------*/
 /*  Pricing       ||---------------------------- */
